After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731807 - Fix the size of the buttons in the search bar
Fix the size of the buttons in the search bar
Status: RESOLVED FIXED
Product: yelp
Classification: Applications
Component: General
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: Yelp maintainers
Yelp maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-18 00:24 UTC by Yosef Or Boczko
Modified: 2014-06-18 14:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
yelp-window: Fix the size of the up/down buttons in the search bar (2.20 KB, patch)
2014-06-18 00:24 UTC, Yosef Or Boczko
none Details | Review
yelp-window: Fix the size of the up/down buttons in the search bar (2.30 KB, patch)
2014-06-18 00:43 UTC, Yosef Or Boczko
committed Details | Review

Description Yosef Or Boczko 2014-06-18 00:24:24 UTC
We needs to pack the up and the down buttons in the same size group with the entry
to get the same height in the buttons and the entry.
Comment 1 Yosef Or Boczko 2014-06-18 00:24:57 UTC
Created attachment 278637 [details] [review]
yelp-window: Fix the size of the up/down buttons in the search bar
Comment 2 Yosef Or Boczko 2014-06-18 00:43:18 UTC
Created attachment 278641 [details] [review]
yelp-window: Fix the size of the up/down buttons in the search bar

I forget to free the size group.
Comment 3 Shaun McCance 2014-06-18 14:18:00 UTC
Nice. They happened to get sized right in older versions of GTK/Adwaita.
Size group gets this right. Thanks.

Attachment 278641 [details] pushed as a0852f8 - yelp-window: Fix the size of the up/down buttons in the search bar