yelp-window: Fix the size of the up/down buttons in the search bar

https://bugzilla.gnome.org/show_bug.cgi?id=731807